syntax = "proto3";

option csharp_namespace = "CShroudGateway.Presentation.DeprecatedApi.gRPC.v1.Protos";

package control;

import "google/protobuf/empty.proto";

service Control {
  rpc CreateUser(CreateUserRequest) returns (google.protobuf.Empty);
  rpc AddClient(AddClientRequest) returns (AddClientResponse);
  rpc DelClient(RemClientRequest) returns (google.protobuf.Empty);

  rpc EnableKey(KeyRequest) returns (google.protobuf.Empty);
  rpc DisableKey(KeyRequest) returns (google.protobuf.Empty);
}

message CreateUserRequest {
  string nickname = 1;
  uint64 telegramId = 2;
}

message AddClientRequest {
  string userId = 1;
  string protocolId = 2;
  string args = 3;
  string name = 4;
}

message AddClientResponse {
  string id = 1;
}

message RemClientRequest {
  string userId = 1;
  string keyId = 2;
}

message KeyRequest {
  string userId = 1;
  string keyId = 2;
}